Use systemd instead of service for ansible

--- a/provisioning/roles/dovecot/tasks/main.yml
+++ b/provisioning/roles/dovecot/tasks/main.yml
@@ -70,4 +70,4 @@
 - name: "/tmp/passwords-inserter: remove"
   file: path=/tmp/passwords-inserter state=absent
 - name: Restart dovecot
-  service: state=restarted name=dovecot
+  systemd: state=restarted name=dovecot
