--- a/provisioning/setup.yml
+++ b/provisioning/setup.yml
@@ -50,5 +50,6 @@
     # - torrents-api # Jackett
     # - finances # https://github.com/firefly-iii/firefly-iii
     # - audioplayer # ampache
+    # - pastebin/files share/url shortener
   vars_files:
     - sensitive_variables.yaml
