Add various fixes for dovecot and ecosystem

--- a/provisioning/roles/base/tasks/main.yml
+++ b/provisioning/roles/base/tasks/main.yml
@@ -37,6 +37,7 @@
     - htop
     - sudo
     - libuv1-dev
+    - dnsutils
     - "linux-headers-{{ ansible_kernel }}"
     force_apt_get: yes
     state: latest
