--- a/provisioning/roles/security/tasks/main.yml
+++ b/provisioning/roles/security/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: Install bsd-mailx
-  apt: pkg=bsd-mailx state=latest
+- name: Install heirloom-mailx
+  apt: pkg=heirloom-mailx state=latest
 - name: Install fail2ban
   apt: pkg=fail2ban state=latest
 - name: Install unattended-upgrades
