--- a/provisioning/roles/dovecot/tasks/main.yml
+++ b/provisioning/roles/dovecot/tasks/main.yml
@@ -7,6 +7,7 @@
     - dovecot-lmtpd
     - dovecot-pop3d
     - dovecot-mysql
+    - bsd-mailx
     state: latest
 
 - name: "/etc/dovecot/dovecot.conf: protocols = imap lmtp"
