--- a/provisioning/roles/postfix/tasks/main.yml
+++ b/provisioning/roles/postfix/tasks/main.yml
@@ -1,12 +1,12 @@
-# TODO: refactor
-- name: Install postfix
-  apt: pkg=postfix state=latest
-- name: Install postfix-mysql
-  apt: pkg=postfix-mysql state=latest
-- name: Install postgrey
-  apt: pkg=postgrey state=latest
-- name: Install sasl modules
-  apt: pkg=libsasl2-modules state=latest
+- name: Install base packages
+  apt:
+    name:
+    - postfix
+    - postfix-mysql
+    - postgrey
+    - libsasl2-modules
+    state: latest
+
 - name: "blackhole email"
   lineinfile:
     dest: /etc/aliases
@@ -22,7 +22,7 @@
 - name: "/etc/postfix/main.cf: smtpd_use_tls=yes"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_use_tls\s*=" line="smtpd_use_tls=yes"
 - name: "/etc/postfix/main.cf: smtpd_tls_auth_only = yes"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_auth_only\s*=" line="smtpd_tls_auth_only = yes"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_auth_only\s*=" line="smtpd_tls_auth_only = no"
 - name: "/etc/postfix/main.cf: smtp_tls_security_level = may"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_security_level\s*=" line="smtp_tls_security_level = may"
 - name: "/etc/postfix/main.cf: smtp_tls_loglevel = 2"
@@ -96,6 +96,12 @@
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_always_send_ehlo\s=" line="smtp_always_send_ehlo = yes"
 - name: "/etc/postfix/main.cf: smtp_tls_CAfile = /etc/ssl/certs/ca-certificates.crt"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_CAfile\s=" line="smtp_tls_CAfile = /etc/ssl/certs/ca-certificates.crt"
+- name: Add smtpd_sasl_auth_enable
+  lineinfile:
+    state: present
+    dest: /etc/postfix/main.cf
+    regexp: '^smtpd_sasl_auth_enable'
+    line: 'smtpd_sasl_auth_enable = yes'
 
 - name: "/etc/postfix/master.cf: enable smtps"
   lineinfile: dest=/etc/postfix/master.cf line="smtps     inet  n       -       -       -       -       smtpd\n  -o syslog_name=postfix/smtps\n  -o smtpd_tls_wrappermode=yes\n  -o smtpd_sasl_auth_enable=yes\n  -o smtpd_reject_unlisted_recipient=no\n  -o smtpd_client_restrictions=$mua_client_restrictions\n  -o smtpd_helo_restrictions=$mua_helo_restrictions\n  -o smtpd_sender_restrictions=$mua_sender_restrictions\n  -o smtpd_recipient_restrictions=\n  -o smtpd_relay_restrictions=permit_sasl_authenticated,reject\n  -o milter_macro_daemon_name=ORIGINATING"
