--- a/provisioning/roles/nextcloud/tasks/main.yml
+++ b/provisioning/roles/nextcloud/tasks/main.yml
@@ -47,3 +47,5 @@
     dest: /etc/nginx/conf.d/nextcloud.conf
     src: "templates/nextcloud.conf.j2"
   notify: reload nginx
+
+# TODO: rm -rf /opt/nextcloud/core/skeleton/*
