Hotfix portainer not be observable by fkn traefik

--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -25,4 +25,4 @@
       # traefik.http.routers.portainer.tls.certresolver: "letsencrypt"
       # traefik.http.routers.portainer.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.portainer.tls.domains[0].sans: "*.{{ server_hostname }}"
-      # traefik.http.services.portainer.loadbalancer.server.port: "9000"
+      traefik.http.services.portainer.loadbalancer.server.port: "9000"
