--- a/provisioning.yml
+++ b/provisioning.yml
@@ -80,10 +80,11 @@
         - netdata
       when: (netdata_enabled | default(False))
 
-# Что ещё: wireguard, shadowsocks, organizr, wallabag, traefik, haveged, swap, dante
+    - role: cheatsheet
+
+# Что ещё: wireguard, shadowsocks, organizr, wallabag, swap
 # research: wiki, git, duplicati, cpuminer, bitwarden
 
 # https://www.reddit.com/r/MoneroMining/comments/hk2mrd/how_to_limit_cpu_usage_while_mining_monero/
-# hostmanager
 
 # https://github.com/jesseduffield/lazydocker
