--- a/roles/server-general-preparations/tasks/main.yml
+++ b/roles/server-general-preparations/tasks/main.yml
@@ -14,3 +14,13 @@
 
 # - name: Set en_US.UTF-8 as default locale
 #   command: localectl set-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
+
+- name: Apply custom sysctl values
+  sysctl:
+    name: "{{ item.key }}"
+    value: "{{ item.value }}"
+    ignoreerrors: yes
+    sysctl_set: yes
+    reload: yes
+    state: present
+  with_items: "{{ sysctl_values }}"
