--- a/provisioning.yml
+++ b/provisioning.yml
@@ -42,6 +42,11 @@
         - shadowsocks
       when: (shadowsocks_enabled | default(False))
 
+    - role: wireguard
+      tags:
+        - wireguard
+      when: (wireguard_enabled | default(False))
+
     ###
     ### Docker applications
     ###
@@ -97,9 +102,10 @@
 
     - role: cheatsheet
 
-# Что ещё: organizr, swap
+# Что ещё: swap, https
 # research: wiki, git, duplicati, cpuminer, bitwarden
 
 # https://www.reddit.com/r/MoneroMining/comments/hk2mrd/how_to_limit_cpu_usage_while_mining_monero/
 
 # https://github.com/jesseduffield/lazydocker
+# https://www.simplecto.com/improve-traefik-https-encryption-qualys-ssl-labs-testssl-sh/
