--- a/roles/wallabag/defaults/main.yml
+++ b/roles/wallabag/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-wallabag_enabled: false
+wallabag_enabled: true
 wallabag_available_externally: "true"
 
 wallabag_data_directory: "{{ docker_home }}/wallabag"
