Fix wireguard installation

--- a/roles/upgrade-packages/defaults/main.yml
+++ b/roles/upgrade-packages/defaults/main.yml
@@ -11,4 +11,5 @@ mayurifag_general_extra_packages:
   - unzip
   - wget
   - whois
-  - linux-headers-{{ ansible_kernel }}
+  - linux-image-amd64
+  - linux-headers-amd64
