Fix https routes

--- a/roles/heimdall/tasks/main.yml
+++ b/roles/heimdall/tasks/main.yml
@@ -43,7 +43,7 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.heimdall.rule: "Host(`{{ heimdall_hostname }}.{{ server_hostname }}`)"
-      # traefik.http.routers.heimdall.tls.certresolver: "letsencrypt"
-      # traefik.http.routers.heimdall.tls.domains[0].main: "{{ server_hostname }}"
-      # traefik.http.routers.heimdall.tls.domains[0].sans: "*.{{ server_hostname }}"
-      # traefik.http.services.heimdall.loadbalancer.server.port: "80"
+      traefik.http.routers.heimdall.tls.certresolver: "letsencrypt"
+      traefik.http.routers.heimdall.tls.domains[0].main: "{{ server_hostname }}"
+      traefik.http.routers.heimdall.tls.domains[0].sans: "*.{{ server_hostname }}"
+      traefik.http.services.heimdall.loadbalancer.server.port: "80"
