--- a/roles/glances/tasks/main.yml
+++ b/roles/glances/tasks/main.yml
@@ -18,7 +18,7 @@
     labels:
       traefik.enable: "{{ glances_available_externally }}"
       traefik.http.routers.glances.rule: "Host(`{{ glances_hostname }}.{{ server_hostname }}`)"
-      # traefik.http.routers.glances.tls.certresolver: "letsencrypt"
-      # traefik.http.routers.glances.tls.domains[0].main: "{{ server_hostname }}"
-      # traefik.http.routers.glances.tls.domains[0].sans: "*.{{ server_hostname }}"
-      # traefik.http.services.glances.loadbalancer.server.port: "61208"
+      traefik.http.routers.glances.tls.certresolver: "letsencrypt"
+      traefik.http.routers.glances.tls.domains[0].main: "{{ server_hostname }}"
+      traefik.http.routers.glances.tls.domains[0].sans: "*.{{ server_hostname }}"
+      traefik.http.services.glances.loadbalancer.server.port: "61208"
