--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -58,7 +58,7 @@
     labels:
       traefik.enable: "{{ nextcloud_available_externally }}"
       traefik.http.routers.nextcloud.rule: "Host(`{{ nextcloud_hostname }}.{{ server_hostname }}`)"
-      # traefik.http.routers.nextcloud.tls.certresolver: "letsencrypt"
-      # traefik.http.routers.nextcloud.tls.domains[0].main: "{{ server_hostname }}"
-      # traefik.http.routers.nextcloud.tls.domains[0].sans: "*.{{ server_hostname }}"
-      # traefik.http.services.nextcloud.loadbalancer.server.port: "80"
+      traefik.http.routers.nextcloud.tls.certresolver: "letsencrypt"
+      traefik.http.routers.nextcloud.tls.domains[0].main: "{{ server_hostname }}"
+      traefik.http.routers.nextcloud.tls.domains[0].sans: "*.{{ server_hostname }}"
+      traefik.http.services.nextcloud.loadbalancer.server.port: "80"
