--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -22,7 +22,7 @@
     labels:
       traefik.enable: "{{ portainer_available_externally }}"
       traefik.http.routers.portainer.rule: "Host(`{{ portainer_hostname }}.{{ server_hostname }}`)"
-      traefik.http.routers.portainer.tls.certresolver: "letsencrypt"
-      traefik.http.routers.portainer.tls.domains[0].main: "{{ server_hostname }}"
-      traefik.http.routers.portainer.tls.domains[0].sans: "*.{{ server_hostname }}"
+      # traefik.http.routers.portainer.tls.certresolver: "letsencrypt"
+      # traefik.http.routers.portainer.tls.domains[0].main: "{{ server_hostname }}"
+      # traefik.http.routers.portainer.tls.domains[0].sans: "*.{{ server_hostname }}"
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
