--- a/roles/traefik/defaults/main.yml
+++ b/roles/traefik/defaults/main.yml
@@ -1,27 +1,21 @@
 ---
 traefik_enabled: true
 
-# directories
 traefik_data_directory: "{{ docker_home }}/traefik"
-
-# network
-traefik_port_http: "80"
-traefik_port_https: "443"
-traefik_port_ui: "8083"
-
 traefik_docker_image: traefik:v2.4
 traefik_log_level: "INFO"
+traefik_subdomain: "traefik"
 
 # find the relevant name and environment variables for your DNS provider at https://go-acme.github.io/lego/dns/
 traefik_dns_provider: cloudflare
 traefik_environment_variables:
-  CF_DNS_API_TOKEN: "abcdabcd123412341234"
+  CF_DNS_API_TOKEN: "change_this"
 
 # requests a wildcard certificate for your domain, so there should be no reason to have to use the staging
 # letsencrypt acme server. If you do want to flip between staging/production, you might need to stop Traefik and clear
 # the "{{ docker_home }}/traefik" after changing this setting.
-# traefik_acme_server: "https://acme-staging-v02.api.letsencrypt.org/directory" # staging
-traefik_acme_server: "https://acme-v02.api.letsencrypt.org/directory" # production
+traefik_acme_server: "https://acme-staging-v02.api.letsencrypt.org/directory" # staging
+# traefik_acme_server: "https://acme-v02.api.letsencrypt.org/directory" # production
 
 # specs
 traefik_memory: 1g
