--- a/provisioning.yml
+++ b/provisioning.yml
@@ -10,6 +10,8 @@
     ###
     ### Run general preparation
     ###
+    - role: djx339.swapoff
+    - role: geerlingguy.swap
     - role: server-general-preparations
       tags:
         - mayurifag-general
