--- a/roles/homer/tasks/main.yml
+++ b/roles/homer/tasks/main.yml
@@ -24,7 +24,7 @@
     memory: "{{ homer_memory }}"
     labels:
       traefik.enable: "true"
-      traefik.http.routers.homer.rule: "Host(`{{ homer_hostname }}.{{ server_hostname }}`)"
+      traefik.http.routers.homer.rule: "Host(`{{ homer_subdomain }}.{{ server_hostname }}`)"
       # traefik.http.routers.homer.tls.certresolver: "letsencrypt"
       # traefik.http.routers.homer.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.homer.tls.domains[0].sans: "*.{{ server_hostname }}"
