--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -21,7 +21,7 @@
     memory: "{{ portainer_memory }}"
     labels:
       traefik.enable: "{{ portainer_available_externally }}"
-      traefik.http.routers.portainer.rule: "Host(`{{ portainer_hostname }}.{{ server_hostname }}`)"
+      traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ server_hostname }}`)"
       # traefik.http.routers.portainer.tls.certresolver: "letsencrypt"
       # traefik.http.routers.portainer.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.portainer.tls.domains[0].sans: "*.{{ server_hostname }}"
