--- a/roles/glances/tasks/main.yml
+++ b/roles/glances/tasks/main.yml
@@ -17,7 +17,7 @@
     memory: "{{ glances_memory }}"
     labels:
       traefik.enable: "{{ glances_available_externally }}"
-      traefik.http.routers.glances.rule: "Host(`{{ glances_hostname }}.{{ server_hostname }}`)"
+      traefik.http.routers.glances.rule: "Host(`{{ glances_subdomain }}.{{ server_hostname }}`)"
       # traefik.http.routers.glances.tls.certresolver: "letsencrypt"
       # traefik.http.routers.glances.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.glances.tls.domains[0].sans: "*.{{ server_hostname }}"
