--- a/roles/wallabag/tasks/main.yml
+++ b/roles/wallabag/tasks/main.yml
@@ -18,12 +18,12 @@
     ports:
       - "{{ wallabag_port }}:80"
     env:
-      SYMFONY__ENV__DOMAIN_NAME: "https://{{ wallabag_hostname }}.{{ server_hostname }}"
+      SYMFONY__ENV__DOMAIN_NAME: "https://{{ wallabag_subdomain }}.{{ server_hostname }}"
     restart_policy: unless-stopped
     memory: "{{ wallabag_memory }}"
     labels:
       traefik.enable: "{{ wallabag_available_externally }}"
-      traefik.http.routers.wallabag.rule: "Host(`{{ wallabag_hostname }}.{{ server_hostname }}`)"
+      traefik.http.routers.wallabag.rule: "Host(`{{ wallabag_subdomain }}.{{ server_hostname }}`)"
       # traefik.http.routers.wallabag.tls.certresolver: "letsencrypt"
       # traefik.http.routers.wallabag.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.wallabag.tls.domains[0].sans: "*.{{ server_hostname }}"
