--- a/roles/cheatsheet/tasks/main.yml
+++ b/roles/cheatsheet/tasks/main.yml
@@ -17,6 +17,6 @@
       Dont forget to
 
       1) ssh configuration
-      2) wallabag:wallabag change password
+      2) Make configuration which is stated in Homer service change password
 
       =========================
