--- a/roles/mayurifag_github_io/tasks/main.yml
+++ b/roles/mayurifag_github_io/tasks/main.yml
@@ -15,3 +15,4 @@
       # traefik.http.routers.mayurifag_github_io.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.mayurifag_github_io.tls.domains[0].sans: "*.{{ server_hostname }}"
       traefik.http.services.mayurifag_github_io.loadbalancer.server.port: "8005"
+      traefik.http.routers.mayurifag_github_io.middlewares: "my-headers@file"
