--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -32,4 +32,4 @@
       # traefik.http.routers.netdata.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.netdata.tls.domains[0].sans: "*.{{ server_hostname }}"
       traefik.http.services.netdata.loadbalancer.server.port: "19999"
-      traefik.http.routers.netdata.middlewares: "auth@file"
+      traefik.http.routers.netdata.middlewares: "auth@file,my-headers@file"
