--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -60,3 +60,4 @@
       # traefik.http.routers.nextcloud.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.nextcloud.tls.domains[0].sans: "*.{{ server_hostname }}"
       traefik.http.services.nextcloud.loadbalancer.server.port: "80"
+      traefik.http.routers.nextcloud.middlewares: "my-headers@file"
