--- a/roles/wallabag/tasks/main.yml
+++ b/roles/wallabag/tasks/main.yml
@@ -28,3 +28,4 @@
       # traefik.http.routers.wallabag.tls.domains[0].main: "{{ server_hostname }}"
       # traefik.http.routers.wallabag.tls.domains[0].sans: "*.{{ server_hostname }}"
       traefik.http.services.wallabag.loadbalancer.server.port: "80"
+      traefik.http.routers.wallabag.middlewares: "my-headers@file"
